@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-28T01:02:54Z",
-  "count_outdated" : 111,
-  "uniques_outdated" : 93,
+  "timestamp" : "2025-10-02T00:56:10Z",
+  "count_outdated" : 112,
+  "uniques_outdated" : 94,
   "count" : 117,
   "uniques" : 99,
   "clones" : [
-    {
-      "timestamp": "2025-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-18T00:00:00Z",
       "count": 1,
